syntax = "proto3";

package sniper;

import "google/protobuf/any.proto";
import "trainer/core/proto/meta.proto";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

////////////////////////////////////////////////////////////////////////////////
//
// Sniper Interface
//
////////////////////////////////////////////////////////////////////////////////
service Sniper {
  // Hub
  rpc SayHello (HelloRequest) returns (HelloResponse);

  rpc StartSample(TensorMessage) returns (VoidMessage);
  rpc ReadSample(TensorMessage) returns (TensorMessage);
  rpc UpdateHubShard(TensorMessage) returns (VoidMessage);

  // Ps
  rpc Create(TensorMessage) returns (VoidMessage);
  rpc Freeze(TensorMessage) returns (VoidMessage);
  rpc FeedSample(TensorMessage) returns (VoidMessage);
  rpc Push(TensorMessage) returns (VoidMessage);
  rpc Pull(TensorMessage) returns (TensorMessage);
  rpc EmbeddingLookup(TensorMessage) returns (TensorMessage);
  rpc PushGrad(TensorMessage) returns (VoidMessage);
  rpc Save(TensorMessage) returns (VoidMessage);
  rpc Restore(TensorMessage) returns (VoidMessage);
  rpc Complete(TensorMessage) returns (VoidMessage);

  rpc Heartbeat(TensorMessage) returns (TensorMessage);
}
